--- a/src/app/pages/user-profile/user-profile.component.scss
+++ b/src/app/pages/user-profile/user-profile.component.scss
@@ -4,3 +4,14 @@
     padding: 0px;
     overflow: hidden;
 }
+
+
+.resp-aut {
+    margin-bottom: 256px;
+}
+
+.btn-edit-pass {
+    margin-left: 20px;
+    height: 52px;
+    margin-top: 15px;
+}
