--- a/src/app/pages/send-message/send/send.component.html
+++ b/src/app/pages/send-message/send/send.component.html
@@ -23,7 +23,7 @@
   
           <div formArrayName="inputParam" >
             <div *ngFor="let param of params; index as i"  class="col-lg-12" >
-              <dsw-input-control label="{{param}}" >
+              <dsw-input-control label="{{param}}" [hidden]="param === 'image' || param === 'video'">
                 <input dwsInputSlot class="form-control" [formControlName]="i" type="text" />
               </dsw-input-control>
             </div>
