--- a/src/app/pages/send-message/send/send.component.html
+++ b/src/app/pages/send-message/send/send.component.html
@@ -75,7 +75,7 @@
   
   </div>
   <div class="modal-footer bg-purple-primary">
-    <button type="button" class="btn btn-secondary" (click)="sendFile()">Enviar mensagem</button>
+    <button type="button" class="btn btn-secondary" (click)="showCountToSendMessage()">Enviar mensagem</button>
   </div>
 </div>
 
