--- a/src/assets/scss/core/navbars/_navbar.scss
+++ b/src/assets/scss/core/navbars/_navbar.scss
@@ -50,7 +50,7 @@
     .navbar-nav {
       .nav-item {
         .media:not(:last-child){
-          margin-bottom: 1.5rem;
+          margin-bottom: 0;
         }
       }
     }
