--- a/src/app/pages/calendar-message/calendar-message.component.html
+++ b/src/app/pages/calendar-message/calendar-message.component.html
@@ -1,8 +1,11 @@
 <div class="page-content">
-    <div class="container-fluid cards-initial">
-      <div class="header-body">
-        <h1>asdasdasdoasimdoaismdoasim</h1>
-
-    </div>
+    <div class='demo-app-main'>
+      <full-calendar *ngIf='calendarVisible' [options]='calendarOptions'>
+        <ng-template #eventContent let-arg>
+          <b>{{ arg.timeText }}</b>
+          <i>{{ arg.event.title }}</i>
+        </ng-template>
+      </full-calendar>
     </div>
 </div>
+
